query method count() added + validations + validation tests